--- a/index.html
+++ b/index.html
@@ -32,70 +32,59 @@
 <body>
 
   <div class="container">
-    <div class="createPost flex flex-fd-c flex-jc-c ">
+    <div class="container_grid">
 
-      <div> Create and schedule content <span>quicker</span></div>
-      <img src="app/scss/assets/images/illustration-create-post.webp" alt="" width="30%" height="16%">
+      <div class="cards flex flex-fd-c flex-ai-c" id="card1">
+        <div>Social Media <span>10x</span> <span>Faster</span> with AI</div>
+        <img src="app/scss/assets/images/illustration-five-stars.webp" alt="">
+        <p>Over 4,000 5-star reviews</p>
+      </div>
+
+      <div class="cards" id="card2">
+        <img src="app/scss/assets/images/illustration-multiple-platforms.webp" alt="">
+        <p>Manage multiple accounts and platforms.</p>
+      </div>
+
+      <div class="cards" id="card3">
+        <p>Maintain a consistent posting schedule.</p>
+        <div class="card3Img"></div>
+      </div>
+
+      <div class="cards flex flex-fw-w flex-jc-c" id="card4">
+        <div>Schedule to social media.</div>
+        <img src="app/scss/assets/images/illustration-schedule-posts.webp" alt="">
+        <p>Optimize post timings to publish content at the perfect time for your audience.</p>
+      </div>
+
+      <div class="cards flex flex-fw-w flex-jc-c" id="card5">
+        <img src="app/scss/assets/images/illustration-grow-followers.webp" alt="">
+        <p>Grow followers with non-stop content.</p>
+      </div>
+
+      <div class="cards" id="card6">
+        <div>>56%</div>
+        <p>faster audience growth</p>
+        <img src="app/scss/assets/images/illustration-audience-growth.webp" alt="">
+      </div>
+
+      <div class="cardsGroup">
+
+        <div class="cards" id="card7">
+          <div> Create and schedule content <span>quicker</span></div>
+          <img src="app/scss/assets/images/illustration-create-post.webp" alt="" width="30%" height="16%">
+        </div>
+
+
+        <div class="cards" id="card8">
+          <p>Write your content using AI.</p>
+          <img src="app/scss/assets/images/illustration-ai-content.webp" alt="">
+        </div>
+      </div>
+
     </div>
 
-    <div class="socialAi flex flex-jc-c flex-ai-c flex-fd-c">
-      <div>Social Media <span>10x</span> Faster with AI</div>
-      <img src="app/scss/assets/images/illustration-five-stars.webp" alt="">
-      <p>Over 4,000 5-star reviews</p>
-    </div>
-
-    <div class="schedule flex  flex-fd-c">
-
-      <div>Schedule to social media.</div>
-      <img src="app/scss/assets/images/illustration-schedule-posts.webp" alt="">
-      <p>Optimize post timings to publish content at the perfect time for your audience.</p>
-    </div>
-
-    <div class="contentAI flex flex-jc-c flex-ai-c flex-fd-c">
-      <p>Write your content using AI.</p>
-      <img src="app/scss/assets/images/illustration-ai-content.webp" alt="">
-    </div>
-
-    <div class="manageAccount flex flex-jc-c flex-ai-c flex-fd-c">
-      <img src="app/scss/assets/images/illustration-multiple-platforms.webp" alt="">
-      <p>Manage multiple accounts and platforms.</p>
-    </div>
-
-    <div class="maintain flex flex-jc-c flex-ai-c flex-fd-c">
-      <p>Maintain a consistent posting schedule.</p>
-      <img src="app/scss/assets/images/illustration-consistent-schedule.webp" alt="">
-    </div>
-
-    <div class="audGrowth flex flex-jc-c flex-ai-c flex-fd-c">
-      <div>>56%</div>
-      <p>faster audience growth</p>
-      <img src="app/scss/assets/images/illustration-audience-growth.webp" alt="">
-    </div>
-
-    <div class="growFollower flex flex-jc-c flex-ai-c ">
-      <img src="app/scss/assets/images/illustration-grow-followers.webp" alt="">
-      <div>Grow followers with non-stop content.</div>
-    </div>
 
   </div>
-
-  <!-- 
-  
-
-  Manage multiple accounts and platforms.
-
-  
-
-  
-  
-
-  
-
-  >56% faster audience growth
-
- .
-
-   -->
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a>.
